  `$PGDATA` instead of running pg_basebackup.  The `local-tar` mode allows
  backing up user tablespaces
* New site-specific configuration option ``pg_data_directory`` is required
  to use the new ``local-tar`` mode, but it's also recommended in other
  configurations as the ``pg_xlog_directory`` option is now deprecated and
  will be removed in a future release
* Basebackup handling was refactored to more cleanly handle the different
  operation modes: pipe data directly from pg_basebackup's stdout to PGHoard
  compression or collect the temporary tar files first that pg_basebackup
  writes itself.  This introduced a new configuration option per site:
  `basebackup_mode` which supersedes the old `stream_compression` config
  option
* Revamped file transformation (encryption, compression) interfaces
* Make sure object storage modules are importable when reading configuration
  instead of only checking it when they are used

pghoard 1.3.0 (2016-05-30)
==========================

* Support for PostgreSQL 9.6 (beta 1)
* Always use strings as metadata keys and values in object storage, fixing
  recent issues with Google Cloud Storage which started throwing a "Backend
  Error" when an integer value was used as well as fixing old WAL cleanup.
* Make LZMA compression level configurable
* Fix unprocessed file handling in receivexlog mode after restart
* Miscellaneous bug fixes

pghoard 1.2.0 (2016-04-28)
==========================

* Support for PostgreSQL 9.2
* Support for Python 3.3
* Various commands no longer require site if a config file with a single
  site is used.  Configuration handling was refactored and much improved
* S3 multipart uploads for greater network error resiliency
* Creating new basebackups by timer can be disabled entirely for a site by
  removing the basebackup_interval_hours option or setting it to a null
  value
* Ignore requests to archive backup labels, they are not used by PGHoard